Version 1.4.7+svn:
 * language and i18n:
   * updated translations: French, Italian, Japanese
 * miscellaneous and bug fixes:
   * AmigaOS4: Minimum stack cookie to prevent stack overflow (patch #1107)
   * Additional screenmodes for when SDL can't guess them (patch #1108)

Version 1.4.7:
 * campaigns:
   * Descent into Darkness
     * fixed bats crashing through the ice in 'Beginning of Revenge' (bug
	 #12685)
   * Heir to the Throne:
     * Added an idle animation for L2 Princess.
 * graphics:
   * new or updated unit frames: Gryphon Rider, Gryphon Master
 * language and i18n:
   * updated translations: Danish, Finnish, Hungarian, Italian
 * miscellaneous and bug fixes:
   * replace a #elif without condition with #else (debian patch #505957)
   * fixed campaign replays (bug #12005)
   * start-of-scenario saves are properly marked as such

Version 1.4.6:
 * language and i18n:
   * updated translations: Czech, Danish, Finnish, French, Galician, German,
     Hungarian, Italian, Polish, Slovak, Turkish, Valencian
 * graphics
   * fixed the parts of the undead flags which were not TC'd

Version 1.4.5:
 * campaigns:
   * Sceptre of Fire
     * Fixed a coordinate bug that caused 'Hills of the Shorbear Clan' to not
       end when it was supposed to.
     * Fixed a bug that allowed one to finish 'The Dragon' by defeating both
       enemy leaders.
 * graphics:
   * new portraits: Silver Mages, White Mages, female Mage of Light, Arch Mages,
     Red Mages, Dark Adepts, female Necromancer/Dark Sorceress, L1 Mages, Lich
 * language and i18n:
   * updated translations: Chinese (Traditional), Czech, Danish, French,
     Galician, German, Hungarian, Italian, Lithuanian, Polish, Russian,
     Spanish
   * updated manpages: Hungarian
   * updated manual: Hungarian
   * fonts: DejaVuSans 2.26
 * miscellaneous and bug fixes:
   * Fixed linewrapping with not to wrap markups (bug #11946 and bug #11945)
   * Fixed OOS bug when giving control and having move in undo stack.