@@ -4,6 +4,8 @@ Version 1.4.7+svn:
  * miscellaneous and bug fixes:
    * AmigaOS4: Minimum stack cookie to prevent stack overflow (patch #1107)
    * Additional screenmodes for when SDL can't guess them (patch #1108)
+   * Fixed bug #12896: Map generator does not sync between clients when
+     advancing in MP campaigns
 
 Version 1.4.7:
  * campaigns:
